fix button issues on iphone safari

--- a/info.css
+++ b/info.css
@@ -24,6 +24,7 @@
 }
 
 .back-btn{
+	background-color: #f1f1f1;
 	border: none;
 	border-radius: 10px;
 	color:  #071d3f;
