--- a/tutorial.css
+++ b/tutorial.css
@@ -48,6 +48,7 @@ td {
 }
 
 .back-btn {
+    background-color: #f1f1f1;
 	border: none;
 	border-radius: 10px;
 	color:  #071d3f;
